--- a/README
+++ b/README
@@ -40,8 +40,9 @@ $data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")-
 // left join takes 2 params, 3rd optional (table and alias(optional), join condition, fields to select)
 $data = Jien::model("Post")
 	->select("p.subject, p.message")
-	->leftJoin("User u", "u.user_id = p.user_id", "u.username, u.user_id")
+	->leftJoin("User u", "u.user_id = p.user_id", "u.username, u.user_id, p.created as post_created")
 	->getAll();
+Jien::debug($data);
 
 *** From the User model ***
 
