--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 ** Jien Model **
 
-*** I created tihs wrapper so that I can get access to my data quicker and safer
 *** The query methods (where, limit, orderBy, groupBy, having) are all chainable so you can mix/match them.
 
 // get a single record by it's primary id
@@ -11,6 +10,9 @@ $data = Jien::model("User")->where("u.username LIKE '%jae%')->get();
 
 // get all records
 $data = Jien::model("User")->getAll();
+
+// custom selects
+$data = Jien::model("User")->select("count(*) as count, u.username, u.user_id)->getAll();
 
 // get all records and limit to 20
 $data = Jien::model("User")->limit(20)->getAll();
@@ -30,12 +32,23 @@ $data = Jien::model("User")->where("u.gender = 'm' OR u.gender='f'")->getAll();
 // alternatively ...
 $data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->orderBy('u.username asc')->getAll();
 
-
 // get all records and where clause for male only and add a or where clause
 $data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();
 
 // get all records and where clause for male only and add a or where clause
 $data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();
+
+// group by gender
+$data = Jien::model("User")->groupBy("u.gender")->getAll();
+
+// group by with having
+$posts = Jien::model("User")
+	->leftJoin("Post p", "p.user_id = u.user_id")
+	->where("p.user_id IS NOT NULL")
+	->groupBy("u.gender")
+	->having("u.active=1")
+	->getAll();
+
 
 // left join takes 2 params, 3rd optional (table and alias(optional), join condition, fields to select)
 $data = Jien::model("Post")
