--- a/README
+++ b/README
@@ -3,43 +3,43 @@
 *** The query methods (where, limit, orderBy, groupBy, having) are all chainable so you can mix/match them.
 
 // get a single record by it's primary id
-$data = Jien::model("User")->get(16);
+$data = Jien::model("User")->get(16)->row();
 
 // get a single record with a where clause
-$data = Jien::model("User")->where("u.username LIKE '%jae%')->get();
+$data = Jien::model("User")->where("u.username LIKE '%jae%')->get()->row();
 
 // get all records
-$data = Jien::model("User")->getAll();
+$data = Jien::model("User")->get()->rows();
 
 // custom selects
-$data = Jien::model("User")->select("count(*) as count, u.username, u.user_id)->getAll();
+$data = Jien::model("User")->select("count(*) as count, u.username, u.user_id)->get()->rows();
 
 // get all records and limit to 20
-$data = Jien::model("User")->limit(20)->getAll();
+$data = Jien::model("User")->limit(20)->get()->rows();
 
 // get all records and limit to 20 and offset by 10
-$data = Jien::model("User")->limit(20, 10)->getAll();
+$data = Jien::model("User")->limit(20, 10)->get()->rows();
 
 // sort by username desc
-$data = Jien::model("User")->limit(20)->orderBy('u.username desc')->getAll();
+$data = Jien::model("User")->limit(20)->orderBy('u.username desc')->get()->rows();
 
 // where clause for male only
-$data = Jien::model("User")->where("u.gender = 'm'")->orderBy('u.user_id asc')->getAll();
+$data = Jien::model("User")->where("u.gender = 'm'")->orderBy('u.user_id asc')->get()->rows();
 
 // where clause for male or female
-$data = Jien::model("User")->where("u.gender = 'm' OR u.gender='f'")->getAll();
+$data = Jien::model("User")->where("u.gender = 'm' OR u.gender='f'")->get()->rows();
 
 // alternatively ...
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->orderBy('u.username asc')->getAll();
+$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->orderBy('u.username asc')->get()->rows();
 
 // get all records and where clause for male only and add a or where clause
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();
+$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->get()->rows();
 
 // get all records and where clause for male only and add a or where clause
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();
+$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->get()->rows();
 
 // group by gender
-$data = Jien::model("User")->groupBy("u.gender")->getAll();
+$data = Jien::model("User")->groupBy("u.gender")->get()->rows();
 
 // group by with having
 $posts = Jien::model("User")
@@ -47,14 +47,14 @@ $posts = Jien::model("User")
 	->where("p.user_id IS NOT NULL")
 	->groupBy("u.gender")
 	->having("u.active=1")
-	->getAll();
+	->get()->rows();
 
 
 // left join takes 2 params, 3rd optional (table and alias(optional), join condition, fields to select)
 $data = Jien::model("Post")
 	->select("p.subject, p.message")
 	->leftJoin("User u", "u.user_id = p.user_id", "u.username, u.user_id, p.created as post_created")
-	->getAll();
+	->get()->rows();
 Jien::debug($data);
 
 *** From the User model ***
@@ -70,7 +70,7 @@ public function byHuman(){
 
 Now you can just:
 
-$data = Jien::model("User")->byHuman()->byPopular()->etc..etc..->getAll();
+$data = Jien::model("User")->byHuman()->byPopular()->etc..etc..->get()->rows();
 
 ...
 
@@ -78,17 +78,17 @@ And pagination is simple too:
 
 [controller]
 $current_page = $this->_getParam('page', 1);
-$this->view->data = Jien::model("User")->enablePager($current_page)->getAll();
+$this->view->data = Jien::model("User")->withPager($current_page)->get()->rows();
 
 or to override defaults (defaults are item_per_page = 10, page_range = 10)
 
 $item_per_page = 10;
 $page_range = 10;
-$this->view->data = Jien::model("User")->enablePager($current_page, $item_per_page, $page_range)->getAll();
+$this->view->data = Jien::model("User")->withPager($current_page, $item_per_page, $page_range)->get()->rows();
 
 [index.phtml]
-<?php echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
-<?php Jien::debug($this->data['records']); ?>
+<?php echo $this->pager($this->data->pager(), 'Sliding', 'partials/pager/pager.phtml'); ?>
+<?php Jien::debug($this->data->rows()); ?>
 
 
 *** Save ***
