jien-53 re-did the model for better convenience and make it more consistent via wrapping result to Jien Model Factory

--- a/README
+++ b/README
@@ -114,7 +114,13 @@ $affected = Jien::model("User")->save(array(
 
 *** Delete ***
 
-$affected = Jien::model("User")->delete("gender = ''");
+$affected = Jien::model("User")->delete($id);
+
+or
+
+$affected = Jien::model("User")->delete("gender = '' AND a != '2'");
+
+
 
 
 ----------
